--- a/fortside.html
+++ b/fortside.html
@@ -9,3 +9,80 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;600&display=swap"
       rel="stylesheet"
     />
+
+    <title>Portfolie By Jannik Madsen</title>
+    <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+    <div class="grid-container">
+      <div class="header">
+        <div class="textboks">
+          <h1 class="titel">Jannik Madsen</h1>
+          <h2 class="undertitel">Multimediedesigner</h2>
+          <p class="paragraf">
+            Hello! My name is Jannik Madsen and I'm studying as a
+            <span>Multimediadesigner</span> at UCL in Odense, Denmark. If you
+            need help with a graphic design task or some photography, get in
+            touch with me and take a look at my portfolio for former projects.
+          </p>
+          <a href="about.html" class="aboutmebutton">ABOUT</a>
+        </div>
+      </div>
+
+      <div class="menu">
+        <a href="index.html">
+          <img class="logo" src="Images/jmlogo.png" alt="Logo" />
+        </a>
+        <ul>
+          <li>
+            <a href="index.html">HOME</a>
+          </li>
+          <li>
+            <a href="photography.html">PHOTOGRAPHY</a>
+          </li>
+          <li>
+            <a href="graphicdesign.html">GRAPHIC DESIGN</a>
+          </li>
+          <li>
+            <a href="about.html">ABOUT</a>
+          </li>
+          <li>
+            <a href="contact.html">CONTACT</a>
+          </li>
+        </ul>
+
+        <div class="socialeikonermenu">
+          <a href="https://www.linkedin.com/in/jannik-madsen-2a787a11b/">
+            <img class="iconstyle" src="Icons/linkedin-icon.png" alt="ICON">
+          </a>
+          <a href="https://www.instagram.com/jannik_madsen/">
+            <img class="iconstyle" src="Icons/ig-icon.png" alt="ICON">
+          </a>
+          <a href="mailto:Jannikmadsen@outlook.com">
+            <img class="iconstyle" src="Icons/mail-icon.png" alt="ICON">
+          </a>
+        </div>
+      </div>
+
+      <div class="main">
+        <div class="boks1">
+          <div class="billede1">
+            <img src="Images/photographyfrontpage.jpg" alt="photography">
+            <a href="photography.html" class="seemorebutton1">SEE MORE</a>
+          </div>
+        </div>
+
+        <div class="boks2">
+          <div class="billede2">
+            <img src="Images/graphicdesignfrontpage.jpg" alt="photography">
+            <a href="graphicdesign.html" class="seemorebutton2">SEE MORE</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer">
+        <p class="footertext">2021 ALL RIGHTS RESERVED</p>
+      </div>
+    </div>
+    </body>
+    </html>
