--- a/fortside.html
+++ b/fortside.html
@@ -9,11 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;600&display=swap"
       rel="stylesheet"
     />
-
-    <title>Portfolie By Jannik Madsen</title>
+    <title>Vi Vinder VM</title>
     <link rel="stylesheet" href="style.css" />
     </head>
+
+
     <body>
-    
+
     </body>
     </html>
