--- a/fortside.html
+++ b/fortside.html
@@ -12,7 +12,7 @@
     <title>Vi Vinder VM</title>
     <link rel="stylesheet" href="style.css" />
     </head>
-
+      <div> Lets go </div>
 
     <body>
 
