--- a/fortside.html
+++ b/fortside.html
@@ -12,7 +12,8 @@
     <title>Vi Vinder VM</title>
     <link rel="stylesheet" href="style.css" />
     </head>
-      <div> Lets go </div>
+      <h1> Lets go </h1>
+        <p> Vi vinder vm åh åh åh </p>
 
     <body>
 
