--- a/fortside.html
+++ b/fortside.html
@@ -19,3 +19,18 @@
 
     </body>
     </html>
+    <section class="header">
+          <nav>
+              <a href="index.html"><img src="images/logo.png"></a>
+              <div class="nav-links" id="navLinks">
+                  <i class="fas fa-window-close" onclick="hideMenu()"></i>
+                  <section class="header">
+          <nav>
+              <a href="index.html"><img src="images/logo.jpg"></a>
+              <div class="nav-links" id="navLinks">
+                  <i class="fas fa-window-close" onclick="hideMenu()"></i>
+                  <section class="header">
+                             <nav>
+                                 <a href="index.html"><img src="images/kat.png"></a>
+                                 <div class="nav-links" id="navLinks">
+                                     <i class="fas fa-window-close" onclick="hideMenu()"></i>
