--- a/fortside.html
+++ b/fortside.html
@@ -14,24 +14,11 @@
     </head>
       <h1> Lets go </h1>
         <p> Vi vinder vm åh åh åh </p>
+        <a href="index.html"><img src="gallery/kat.jpg"></a>
+
 
     <body>
-  
+
 
     </body>
     </html>
-    <section class="header">
-          <nav>
-              <a href="index.html"><img src="images/logo.png"></a>
-              <div class="nav-links" id="navLinks">
-                  <i class="fas fa-window-close" onclick="hideMenu()"></i>
-                  <section class="header">
-          <nav>
-              <a href="index.html"><img src="images/logo.jpg"></a>
-              <div class="nav-links" id="navLinks">
-                  <i class="fas fa-window-close" onclick="hideMenu()"></i>
-                  <section class="header">
-                             <nav>
-                                 <a href="index.html"><img src="images/kat.png"></a>
-                                 <div class="nav-links" id="navLinks">
-                                     <i class="fas fa-window-close" onclick="hideMenu()"></i>
